# fuzzy-matcher

./: Cargo.toml
examples/: fz.rs
src/: bitap.rs  clangd.rs  lib.rs  simple.rs  skim.rs  util.rs
