[package]
name = "fuzzy-muff"
version = "0.3.26"
authors = [
    "Jinzhou Zhang <lotabout@gmail.com>",
    "Robert Swinford <robert.swinford <...at...> gmail.com>",
]
description = "Fuzzy Matching Library"
documentation = "https://docs.rs/fuzzy-matcher"
homepage = "https://github.com/lotabout/fuzzy-matcher"
repository = "https://github.com/lotabout/fuzzy-matcher"
readme = "README.md"
keywords = ["fuzzy", "match", "text", "search"]
license = "MIT"
edition = "2018"

[lib]
name = "fuzzy_matcher"
path = "src/lib.rs"

[features]
default = []
compact = []

[dependencies]
thread_local = { version = "1.1.8", default-features = false }

[dev-dependencies]
termion = { version = "4.0.2", default-features = false }
